# PyTwitLoader

./: .gitignore  Dockerfile  README.rst  config.json.sample  pyproject.toml  sample.json
pytwitloader/: configuration.py  downloader.py  main.py  twitter_calls.py
tests/: test_pytwitloader.py
