[tool.poetry]
name = "pytwitloader"
version = "0.1.0"
description = ""
authors = ["JoshKing56 <joshuaiking56@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
